--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,8 @@ keywords = [
 license = "Apache-2.0"
 
 [tool.poetry.dependencies]
-python = "<3.12,>=3.8.1"
-singer-sdk = { version="^0.30.0" }
+python = ">=3.8.1"
+singer-sdk = { version=">0.30.0" }
 mysqlclient = "^2.2.0"
 sqlalchemy = "<2"
 fs-s3fs = { version = "^1.1.1", optional = true }
